# futurefintechsurvey

./: .gitignore  Dockerfile  Readme.md  compose.yml  futurefintech_form.js  index.html  pyproject.toml  style.css
backend/: requirements.txt  schema.sql
backend/app/: auth.py  crud.py  database.py  export.py  main.py  models.py  routers.py  schemas.py  settings.py  utils.py
config/caddy/: Caddyfile
data/caddy/: placeholder
static/: futurefintech_form.js  index.html  style.css
